Content update on every pages

--- a/public/templates/Activity Stream.html
+++ b/public/templates/Activity Stream.html
@@ -97,12 +97,20 @@
 </header>
 <!--end header-->
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-3 col-sm-5">
-      <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-md.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
-      <div class="list-group"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
-    </div>
+<div class="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 col-sm-5">
+        <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
+      <div><form class="mainnav-form" role="">
+          <input class="form-control input-md" type="text" placeholder="Add your personal message">
+          
+        </form></div>
+      
+      <div class="list-group padding-top"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
+    
+       </div>
+      
     
     <!--inbox-->
     <div class="col-md-6 col-sm-7 center-column-padding">
@@ -257,22 +265,24 @@
     <div class="col-md-3 layout-main ">
       <p>
       <div class="row text-center suggested-coworker-box">
+      
         <div class="row  pull-right suggested-coworker-close"> <a href="#"> <i class="fa fa-times"> </i> Close </a> </div>
-        <div class="text-center "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
-        <div class="row">
+        <div class="text-left"><a class="">Preview</a> &nbsp; &nbsp;<a class=""> Follow</a> </div>
+        <div class="coworker-carousel-padding "><img src="../themes/landing/img/avatars/avatar-2-lg.jpg" alt=" name"/></div>
+        <div class="row coworker-carousel-button">
           <div class="col-md-6 text-left"><a class="btn btn-primary" href="#clients-carousel" data-slide="prev">&lsaquo;</a></div>
           <div class="col-md-6"><a class=" pull-right btn btn-primary" href="#clients-carousel" data-slide="next">&rsaquo;</a> </div>
         </div>
         <div class=" coworker-profile">
           <p class="  text-center"><a class="coworker-name">Lizzel Harison</a> </p>
           <p class=" text-center coworker-title ">Project Manager</p>
-          <p class="profile-detail"> <b>Previous:</b> Mobile Telecom Services Company </p>
+          <p class=" text-center personal-message-text"> <i class="icon-li fa fa-quote-left personal-message-icon "></i>&nbsp; this is personal message &nbsp;<i class="icon-li fa fa-quote-right personal-message-icon "></i> </p>
           <p class="profile-detail"> <b>Education:</b> University of Washington, Michael G. Foster School of Business</a> </p>
-          <p class="profile-detail"> <b>Top Skills:</b> Customer service<</p>
+          <p class="profile-detail"> <b>Top Skills:</b> Customer service</p>
           <p class="profile-detail text-center"> <a>See full profile</a> </p>
         </div>
         <div class="suggested-coworker-footer"> &nbsp;
-          <div class=" inline-block btn btn-default"> <a >Add Coworker</a> </div>
+          <div > <a class=" btn btn-primary" >Add Coworker</a> </div>
         </div>
       </div>
     </div>
