--- a/public/templates/career.html
+++ b/public/templates/career.html
@@ -200,38 +200,31 @@
                         </div>
 
                         <div class="col-sm-3">
-                           <h4 class="title-size text-center">
-                                Stay Connected
-                            </h4>
-
-                            <p class="text-footer text-center">
-                               Add us on Facebook or follow us on Twitter
-                            </p>
-
-                            <br>
-
-                            <ul class="footer-social-link text-footer text-center">
-                                <li>
-                                    <a href="https://www.facebook.com/360notion™"
+        <h4 class="title-size text-center"> Stay Connected </h4>
+        <br>
+        <ul class="footer-social-link text-footer text-center">
+          <li> <a href="https://www.facebook.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Facebook"
-                                        data-placement="bottom">
-                                        <i class="fa fa-facebook text-footer"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://twitter.com/360notion™"
+                                        data-placement="bottom"> <i class="fa fa-facebook text-footer"></i> </a> </li>
+          <li> <a href="https://twitter.com/360notion™"
                                         target="_blank"
                                         class="ui-tooltip"
                                         title="Twitter"
-                                        data-placement="bottom">
-                                        <i class="fa fa-twitter"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
+                                        data-placement="bottom"> <i class="fa fa-twitter"></i> </a> </li>
+          <li> <a href="https://pinterest.com/360notion™"
+                                        target="_blank"
+                                        class="ui-tooltip"
+                                        title="Pinterest"
+                                        data-placement="bottom"> <i class="fa fa-pinterest-square"></i> </a> </li>
+          <li> <a href="https://tumblr.com/360notion™"
+                                        target="_blank"
+                                        class="ui-tooltip"
+                                        title="tumblr"
+                                        data-placement="bottom"> <i class="fa fa-tumblr"></i> </a> </li>
+        </ul>
+      </div>
                         <div class="col-sm-3">
                             <h4 class="title-size text-center">
                               Stay Updated
