--- a/public/templates/faq.html
+++ b/public/templates/faq.html
@@ -96,16 +96,17 @@
                             </div>
 
                             <div id="faq-general-1" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
-                                    “360notion™ provides a private social network for your company to:
+                                    360notion™ allows you to create a private social network for your company wherein you could:
+
                                 </p>
                                 <ul>
-                                    <li>Chat with anyone in your company</li>
-                                    <li>Share and backup files</li>
-                                    <li>Post status updates</li>
-                                    <li>Customize your profile</li>
-                                    <li>Conduct performance evaluations</li>
+                                    <li>chat with friends</li>
+                                    <li>share and backup files</li>
+                                    <li>post status updates</li>
+                                    <li>customize your profile</li>
+                                    <li>conduct performance evaluations</li>
                                 </ul>
                                 </div>
                             </div>
@@ -122,7 +123,7 @@
                             </div>
 
                             <div id="faq-general-2" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     Companies are more productive if its members engage effectively with his/her colleagues.
 
@@ -139,13 +140,13 @@
                                 <h4 class="panel-title">
                                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-help" href="#faq-general-3">
                                         <i class="fa accordion-caret"></i><i class="fa faq-accordion-caret"></i>
-                                       How can I create a 360notion network ™?   
+                                       How can my company start using 360notion™?   
                                     </a>
                                 </h4>
                             </div>
 
                             <div id="faq-general-3" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     To create a social network for your company, just <a href="/signup">sign up here</a>.
                                 </p>
@@ -164,9 +165,9 @@
                             </div>
 
                             <div id="faq-general-4" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
-                                    Simply ask the responsible personnel to give you an invitation to your company's social network.
+                                    To get a personal 360notion™ account, ask the responsible personnel to give you an invitation to your company's social network.
                                 </p>
                                 </div>
                             </div>
@@ -183,7 +184,7 @@
                             </div>
 
                             <div id="faq-general-5" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     360notion™ is safe and secure at all times. We can do this because:
                                 </p>
@@ -207,7 +208,7 @@
                             </div>
 
                             <div id="faq-general-6" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     On free social networks and mobile chat applications, you cannot manage anything. 
                                     This includes the exclusive right to profit from Intellectual Property you, your employees or your 
@@ -257,13 +258,36 @@
                             </div>
 
                             <div id="faq-presale-1" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
-                                   Yes! All companies come with a risk-free 14-day trial.
+                                  Yes! All companies get a 14-day trial period which is FREE of charge.
                                 </p>
                                 <p>
-                                    If you do not find 360notion™ useful during the trial period, you may cancel 
-                                    your subscription to remove your company from 360notion™ and you will not be charged anything.
+                                   
+If you do not find 360notion™ useful during the trial period, you may cancel your subscription to remove your company from 360notion™ and you will not be charged anything.
+
+                                </p>
+                                </div>
+                            </div>
+                        </div>
+                        
+                           <div class="panel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="accordion-toggle"
+                                        data-toggle="collapse"
+                                        data-parent="#accordion-customization"
+                                        href="#faq-presale-8">
+                                        <i class="fa accordion-caret"></i><i class="fa faq-accordion-caret"></i>
+                                        How do i pay for this service?
+                                    </a>
+                                </h4>
+                            </div>
+
+                            <div id="faq-presale-8" class="panel-collapse collapse">
+                                <div class="panel-body large-text">
+                                <p>
+                                  You need a valid credit card to pay for your company's chosen plan. Payments are charged monthly
                                 </p>
                                 </div>
                             </div>
@@ -282,7 +306,7 @@
                             </div>
 
                             <div id="faq-presale-9" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                    No! You won't be charged now. You'll only be charged if your company continues using a Mega or Premium Plan after your 14-day risk free trial ends.
                                 </p>
@@ -304,7 +328,7 @@
                             </div>
 
                             <div id="faq-presale-2" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                 We accept all MasterCard, Visa, Discover and American Express cards. Payments are charged monthly. You can cancel anytime. If you cancel, your company's data will be deleted from our database and no further payments are required.
                                 </p>
@@ -326,7 +350,9 @@
                             </div>
 
                             <div id="faq-presale-3" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
+                                
+   
                                 <p>
                                     If you are:
                                 </p>
@@ -335,16 +361,17 @@
                                          A startup with <strong>less than 3 members</strong>, you should get the Starter plan.
                                     </li>
                                     <li>
-                                        A small/medium size company with  <strong>3 to 50 members </strong>, you should get the Mega Plan. This costs less than a small cup of coffee per day!
+                                        A small/medium size company with  <strong>3 to 50 members </strong>, you should get the Mega Plan for only $30/month per member.
                                     </li>
                                     <li>
-                                        A large company with <strong>51 members or more</strong>, you should get the Premium Plan. This also costs less than a small cup of coffee per day!
+                                        A large company with <strong>51 members or more</strong>, you should get the Premium Plan  for only $25/month per member. This also costs less than a small cup of Starbucks® coffee per day!
 
                                     </li>
+                                    
                                 </ul>
                                 <small class="help-block">
                                    
-Learn more about each pricing plan <a href="/pricing">here</a>.
+Learn more about our pricing plan <a href="/pricing">here</a>.
                                 </small>
                                 </div>
                             </div>
@@ -364,14 +391,40 @@ Learn more about each pricing plan <a href="/pricing">here</a>.
                             </div>
 
                             <div id="faq-presale-4" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
-                                   Yes! You may change your plan at anytime.
+                                 
+Yes! You may change your company's plan after signing up depending on your needs.
+
                                 </p>
                                 </div>
                             </div>
                         </div>
+<div class="panel">
+                            <div class="panel-heading">
+                                <h4 class="panel-title">
+                                    <a class="accordion-toggle"
+                                        data-toggle="collapse"
+                                        data-parent="#accordion-customization"
+                                        href="#faq-presale-10">
+                                        <i class="fa accordion-caret"></i><i class="fa faq-accordion-caret"></i>
+                                        Can I opt-out from 360notion™?
+                                    </a>
+                                </h4>
+                            </div>
 
+                            <div id="faq-presale-10" class="panel-collapse collapse">
+                                <div class="panel-body large-text">
+                                <p>
+                                 
+Yes! You may opt-out any time if you already want to remove your company from 360notion™.
+After opting out, your company's data will be deleted from our database and you will not be charged anymore
+
+
+                                </p>
+                                </div>
+                            </div>
+                        </div>
                         <div class="panel">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
@@ -386,7 +439,7 @@ Learn more about each pricing plan <a href="/pricing">here</a>.
                             </div>
 
                             <div id="faq-presale-6" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     Earn 10% commission on referrals that result in a qualifying Mega or Premium Plan purchase.
 
@@ -413,7 +466,7 @@ We will apply the 10% commission to your company’s 360notion™ account the fo
                             </div>
 
                             <div id="faq-presale-7" class="panel-collapse collapse">
-                                <div class="panel-body">
+                                <div class="panel-body large-text">
                                 <p>
                                     First, you save time because tasks that used to take a long time can be done quickly and privately. 
                                 </p>
@@ -426,6 +479,7 @@ We will apply the 10% commission to your company’s 360notion™ account the fo
                                     Outside consultants charge $500 or more per "evaluation" visit, often with less accurate results.
                                 </p>
                                 </div>
+                                
                             </div>
                         </div>
                     </div>
