--- a/public/templates/features.html
+++ b/public/templates/features.html
@@ -48,7 +48,7 @@
                                 </li>   
                               
                                 <li {@eq key="/login" value="{url}"}class="active"{/eq}>
-                                    <a href="/login">Log In</a>
+                                    <a href="/login">Sign In</a>
                                 </li>
                             </ul>
 
@@ -129,27 +129,27 @@
 
                             <img src="">
 
-                            <b class="About-Us "  >
+                            <p class="feature-text"  >
                                You should be able to connect with coworkers whether they are in the field, on the road, or even at home. That is why we designed 360notion™ to work well with a wide array of devices including smart phones and tablets.
-                            </b>
+                            </p >
                         </div>
 
-                        <div class="tab-pane fade About-Us" id="snap-tab">
+                        <div class="tab-pane fade" id="snap-tab">
                             <h3 class="content-title">
                                 <strong>Snap Messages</strong>
                             </h3>
 
-                            <p>
+                            <p class="feature-text">
                                 Need to send sensitive data to your colleagues? 
                             </p>
 
-                            <p>360notion™ allows you to send messages a la "Snapchat" to expire them 30 seconds after 
+                            <p class="feature-text">360notion™ allows you to send messages a la "Snapchat" to expire them 30 seconds after 
                                 being read by the recipient. Snap messages are not stored in our databases to guarantee that 
                                 they don't leave any trace behind. 
                             </p>
                         </div>
 
-                        <div class="tab-pane fade  About-Us" id="mistake-tab">
+                        <div class="tab-pane fade feature-text " id="mistake-tab">
                             <h3 class="content-title">
                                 <strong>Mistake-Proof Messages</strong>
                             </h3>
@@ -164,7 +164,7 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade About-Us" id="feedback">
+                        <div class="tab-pane fade feature-text" id="feedback">
                             <h3 class="content-title">
                                 <strong>360-degree Feedback </strong></h3>
 
@@ -179,7 +179,7 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade About-Us" id="files">
+                        <div class="tab-pane fade feature-text" id="files">
                             <h3 class="content-title">
                                 <strong>File Storage</strong></h3>
 
@@ -194,7 +194,7 @@
                             </p>
                         </div>
 
-                        <div class="tab-pane fade About-Us" id="status">
+                        <div class="tab-pane fade feature-text" id="status">
                             <h3 class="content-title">
                                 <strong>Status Updates </strong></h3>
 
@@ -227,14 +227,12 @@
                             </small> </p>
                         </div>
 
-                        <div class="col-sm-3">
+                         <div class="col-sm-3">
                            <h4 class="title-size text-center">
                                 Stay Connected
                             </h4>
 
-                            <p class="text-footer text-center">
-                               Add us on Facebook or follow us on Twitter
-                            </p>
+                          
 
                             <br>
 
@@ -255,6 +253,24 @@
                                         title="Twitter"
                                         data-placement="bottom">
                                         <i class="fa fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://pinterest.com/360notion™"
+                                        target="_blank"
+                                        class="ui-tooltip"
+                                        title="Pinterest"
+                                        data-placement="bottom">
+                                        <i class="fa fa-pinterest-square"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://tumblr.com/360notion™"
+                                        target="_blank"
+                                        class="ui-tooltip"
+                                        title="tumblr"
+                                        data-placement="bottom">
+                                        <i class="fa fa-tumblr"></i>
                                     </a>
                                 </li>
                             </ul>
