--- a/public/templates/signup.html
+++ b/public/templates/signup.html
@@ -62,7 +62,7 @@
    <div class="account-wrapper">
         <div class="account-body">
             <h3>Get Started with a Free Account.</h3>
-            <h5>Sign up in 30 seconds. No credit card required.</h5>
+            <h5>Sign up in less than 30 seconds, 14-day risk free trial</h5>
 
             <form id="signup_form" action="/signup" method="POST" class="form account-form" role="form">
                 <fieldset>
@@ -112,7 +112,7 @@
                     </div>
 
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary">
+                        <button type="submit" class="btn btn-primary sign-in-up">
                             Create My Account &nbsp; 
                         </button>
                     </div>
@@ -122,8 +122,10 @@
 
         <div class="account-footer">
             <p>
-                Already have an account? &nbsp;
-                <a href="/login" class="">Log In to your Account!</a>
+                Already have an Account? 
+
+&nbsp;
+                <a href="/login" class="">Please Sign In</a>
             </p>
         </div>
     </div>
