--- a/public/templates/sigup-success.html
+++ b/public/templates/sigup-success.html
@@ -61,11 +61,13 @@
 
  <div class="account-wrapper">
         <div class="account-body">
-            <h1><i class="fa fa-check"></i> Sign up successful</h1>
+            <h2><i class="fa fa-check"></i> <p> Sign up successful</p></h2>
             <p>
-                Please confirm your identity through the email we sent you
-                <br>or<br>
-                <a href="/" class="home-link">Go back to our Home Page</a>
+               <h2>
+
+We sent verification to your company email address.</h2>
+
+            
             </p>
         </div>
     </div>
