--- a/public/templates/Profile.html
+++ b/public/templates/Profile.html
@@ -101,71 +101,75 @@
     <div class="row">
       <div class="col-md-3 col-sm-5">
         <div class="profile-avatar padding-top"> <img src="../themes/landing/img/avatars/avatar-1-lg.jpg" class="profile-avatar-img thumbnail" alt="Profile Picture"> </div>
-      <div class="list-group"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
+      <div><form class="mainnav-form" role="">
+          <input class="form-control input-md" type="text" placeholder="Add your personal message">
+          
+        </form></div>
+      
+      <div class="list-group padding-top"> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-asterisk text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard" class="list-group-item {@eq key="/dashboard" value="{url}"}current{/eq}"> <i class="fa fa-home text-sidebar"></i> &nbsp;&thinsp;&thinsp;&thinsp;My Activity Stream <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/messages" class="list-group-item {@eq key="/dashboard/messages" value="{url}"}current{/eq}"> <i class="fa fa-envelope text-sidebar"></i> &nbsp;&thinsp;Messages <i class="fa fa-chevron-right list-group-chevron"></i> <span class="badge">3</span> </a> <a href="/dashboard/files" class="list-group-item {@eq key="/dashboard/files" value="{url}"}current{/eq}"> <i class="fa fa-paperclip text-sidebar"></i> &nbsp;&nbsp;Files <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/friends" class="list-group-item {@eq key="/dashboard/friends" value="{url}"}current{/eq}"> <i class="fa fa-group text-sidebar"></i> &nbsp;Friends <i class="fa fa-chevron-right list-group-chevron"></i> </a> <a href="/dashboard/profile" class="list-group-item {@eq key="/dashboard/profile" value="{url}"}current{/eq}"> <i class="fa fa-user text-sidebar"></i> &nbsp;&nbsp;My Profile <i class="fa fa-chevron-right list-group-chevron"></i> </a> </div>
     
        </div>
       
+    
+      
       <!-- end left sidebar-->
-      <div class="col-md-9 col-sm-8 ">
+      <div class="col-md-9 col-sm-8 profile-line-height">
         <h4 class="title-heading text-center">My Profile</h4>
-      <div class="stream-box">
-      <div class=" pull-right valign-top"> <a> Edit </a></div>
-       <h4> General Infomation </h4>
-       
-       <div> <b>Company Name:</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </div>
-       <div> <b>Company Email Adress:</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-       <div> <b>Full Name:</b>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-       <div> <b>Pass Word :</b>Show Password</div>
-        </div>
+      
        <div class="stream-box">
             <div class=" pull-right valign-top"> <a> Edit </a></div>
-      <h4> Other Infomation</h4>
-        <div> <b>Avatar:</b> <a></a></div>
-        <div class="fileupload-new thumbnail" style="width: 180px; height: 180px;">
-<img alt="Profile Avatar" src="../themes/landing/img/avatars/avatar-1-lg.jpg">
+      <h4 class="text-center"> personal information</h4>
+        <div> <b>Avatar</b> <a></a></div>
+        <div class="avatar-personal-info">
+<img src="../themes/landing/img/avatars/avatar-1-lg.jpg" alt="Profile Avatar" width="130" height="136">
 </div>
-       <div> <b>Number of Friends:</b> <a>1234</a></div>
-       <div> <b>Number of Follower:</b><a> 234</a></div>
-       <div> <b>Number of Following:</b><a> 234</a></div>
-       <div> <b>About Me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-       <div><b> Department:</b> Marketing</div>
        
-       <div> <b>Job Title:</b> Manager</div>
-       <div> <b>Location:</b></b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-        <div><b>Birthday:</b> 12-12-1976</div>
-         <div><b>Skill:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
-          <div><b>url:</b> http://www.url.com</div>
+       <div> <b>about me:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+       <div><b> birthday:</b> g</div>
+       
+       <div> <b>relationship status:</b> </div>
+           <div> <b>location:</b> </div>
          </div>
-         <div class="stream-box">
-              <div class=" pull-right valign-top"> <a> Edit </a></div>
-        <h4>Contact Infomation</b></h4>
-       <div><b> Work Phone: ext</b></div>
-        <div> <b>Mobile:</b></div>
-       <div><b>Home Adrress:</b></div>
-        <div><b>Other Emails:</b></div>
-         <div><b>Skype Name:</b></div>
-         </div>
-        <div class="stream-box">
+         
+          <div class="stream-box">
              <div class=" pull-right valign-top"> <a> Edit </a></div>
-         <h4>
-         Work History</h4>
-       <div> <b>From:       To: </b></div>
-        <div> <b>Company Name:</b></div>
-       <div> <b>Job Title:</b></div>
-        <div><b>Description:</b></div>
-            <div > <a> <i class="fa fa-plus"></i> Add more </a></div>
-        </div>
-        <div class="stream-box">
-             <div class=" pull-right valign-top"> <a> Edit </a></div>
-         <h4>Education</h4>
-       <div> <b>from to: </b> </div>
-        <div> <b>School Name:</b></div>
-       <div> <b>Degree/Diploma:</b></div>
-        <div><b>Description:</b></div>
-         <div > <a> <i class="fa fa-plus"></i> Add more </a></div>
+         <h4 class="text-center">education</h4>
+       <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
+        <div> <b>school name:</b></div>
+       <div> <b>degree/diploma:</b></div>
+        <div><b>description:</b></div>
+         <div > <a> <i class="fa fa-plus"></i> add more </a></div>
        </div>
        
+         <div class="stream-box">
+              <div class=" pull-right valign-top"> <a> Edit </a></div>
+        <h4 class="text-center">contact infomation</b></h4>
+       <div><b> work:  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;ext:</b></div>
+        <div> <b>mobile:</b></div>
+       <div><b>other email addresses:</b></div>
+        <div><b>home address:</b></div>
        
+         </div>
+        <div class="stream-box">
+             <div class=" pull-right valign-top"> <a> Edit </a></div>
+         <h4 class="text-center">
+         company information</h4>
+       <div> <b>job title:
+ </b></div>
+        <div> <b>department:</b></div>
+       <div> <b>skills:</b></div>
+        </div>
+       
+       
+        <div class="stream-box">
+             <div class=" pull-right valign-top"> <a> Edit </a></div>
+         <h4 class="text-center">work experience</h4>
+       <div> <b>from: &nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;&nbsp;to: </b> </div>
+        <div> <b>company name:</b></div>
+       <div> <b>job title:</b></div>
+        <div><b>description:</b></div>
+         <div > <a> <i class="fa fa-plus"></i> add more </a></div>
+       </div>
        
        
        
