--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -61,8 +61,8 @@
 
   <div class="account-wrapper">
         <div class="account-body">
-            <h3>Welcome to 360notion™.</h3>
-            <h5>Please sign in.</h5>
+            <h3>welcome to 360notion™.</h3>
+            <h5>Please Sign In.</h5>
 
             <form id="login_form" action="/login" method="POST" class="form account-form" role="form">
                
@@ -87,7 +87,7 @@
                     </div>
 
                     <div class="form-group text-center">
-                        <button type="submit" class="btn btn-primary sign-in">
+                        <button type="submit" class="btn btn-primary sign-in-up">
                             Sign In &nbsp; 
                         </button>
                     </div>
